--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -1,3 +1,8 @@
+
+.project{
+     margin-left: 20px;
+}
+
 /* applies to anything of class "example-class-selector" */
 .example-class-selector {
 	margin-top: 2em;
@@ -31,4 +36,5 @@ body {
      right: 0;
      position: absolute;
      z-index: -1;
+
 }
